# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("../../../nfc.gni")

ohos_shared_library("nfc_tag_ani") {
  include_dirs = [
    "inc",
    "$NFC_DIR/interfaces/inner_api/common",
  ]
  sanitize = {
    cfi = true
    boundary_sanitize = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [ "src/nfc_tag_ani.cpp" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
  ]

  deps = [ "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common" ]
  part_name = "nfc"
  subsystem_name = "communication"
}

generate_static_abc("nfc_tag_ani_abc") {
  base_url = "ets"
  files = [ "ets/@ohos.nfc.tag.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/nfc_tag_ani_abc.abc"
}

ohos_prebuilt_etc("nfc_tag_ani_abc_etc") {
  source = "$target_out_dir/nfc_tag_ani_abc.abc"
  module_install_dir = "framework"
  part_name = "nfc"
  subsystem_name = "communication"
  deps = [ ":nfc_tag_ani_abc" ]
}
