# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/idl_tool/idl.gni")
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../nfc.gni")

idl_gen_interface("nfc_hce_interface") {
  sources = [ "idl/IHceSession.idl" ]
  configs = [ ":nfc_inner_kits_public_config" ]

  sequenceable_ext_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
  ]
  sources_cpp = [ rebase_path("${NFC_DIR}/interfaces/inner_api/common/ce_payment_services_parcelable.cpp") ]
  log_domainid = "0xD000301"
  log_tag = "Nfc_Hce_Session"
  part_name = "nfc"
  subsystem_name = "communication"
}

config("nfc_inner_kits_config") {
  visibility = [ ":*" ]
  defines = [ "DEBUG" ]
  cflags_cc = [ "-fexceptions" ]

  include_dirs = []
}

config("nfc_inner_kits_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${target_gen_dir}",
    "$NFC_DIR/interfaces/inner_api/cardEmulation",
    "$NFC_DIR/interfaces/inner_api/common",
    "$NFC_DIR/interfaces/inner_api/controller",
  ]
}

ohos_shared_library("nfc_inner_kits_card_emulation") {
  sanitize = {
    cfi = true
    boundary_sanitize = true
    integer_overflow = true
    cfi_cross_dso = true
    debug = false
    ubsan = true
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "cardEmulation.cpp",
    "hce_cmd_callback_stub.cpp",
    "hce_service.cpp",
  ]

  configs = [ ":nfc_inner_kits_config" ]

  public_configs = [ ":nfc_inner_kits_public_config" ]

  deps = [
    ":libnfc_hce_interface_proxy",
    ":nfc_hce_interface",
    "../common:nfc_inner_kits_common",
    "../controller:nfc_inner_kits_controller",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  part_name = "nfc"
  subsystem_name = "communication"
}
