# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

config("nfc_service_unit_test_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//foundation/communication/nfc/interfaces/inner_api/include",
    "//foundation/communication/nfc/interfaces/inner_api/include/controller",
    "//foundation/communication/nfc/interfaces/inner_api/include/tags",
    "//foundation/communication/nfc/interfaces/inner_api/include/cardEmulation",
  ]

  defines = []
  cflags_cc = []
  ldflags = []
  libs = []
}

unit_test_deps = [
  "//foundation/communication/nfc/interfaces/inner_api:nfc_inner_kits",
  "//third_party/googletest:gtest_main",
]

unit_test_external_deps = [
  "ability_base:want",
  "c_utils:utils",
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
  "samgr:samgr_proxy",
]

ohos_unittest("controller_test") {
  module_out_path = "nfc/services"

  sources = [ "controller_test/nfc_controller_test.cpp" ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("cardemulation_test") {
  module_out_path = "nfc/services"

  sources = [ "cardemulation_test/cardemulation_test.cpp" ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("tags_test") {
  module_out_path = "nfc/services"

  sources = [
    "tags_test/iso15693_tag_test.cpp",
    "tags_test/isodep_tag_test.cpp",
    "tags_test/mifare_classic_tag_test.cpp",
    "tags_test/ndef_tag_test.cpp",
    "tags_test/nfca_tag_test.cpp",
    "tags_test/nfcb_tag_test.cpp",
    "tags_test/nfcf_tag_test.cpp",
    "tags_test/tag_info_test.cpp",
  ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

group("nfc_service_unittest") {
  testonly = true
  deps = [
    ":cardemulation_test",
    ":controller_test",
    ":tags_test",
  ]
}
