# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../nfc.gni")

config("nfc_service_unit_test_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "$NFC_DIR/interfaces/inner_api/cardEmulation",
    "$NFC_DIR/interfaces/inner_api/common",
    "$NFC_DIR/interfaces/inner_api/controller",
    "$NFC_DIR/interfaces/inner_api/tags",
    "$NFC_DIR/services/include",
    "$NFC_DIR/services/src/nci_adapter/nci_native_default/include",
    "$NFC_DIR/services/src",
    "$NFC_DIR/services/src/external_deps",
    "//third_party/libnfc-nci/SN100x/src/gki/common/",
    "//third_party/libnfc-nci/SN100x/src/gki/ulinux/",
    "//third_party/libnfc-nci/SN100x/src/include",
    "//third_party/libnfc-nci/SN100x/src/nfa/include",
    "//third_party/libnfc-nci/SN100x/src/nfc/include",
    "//third_party/libnfc-nci/SN100x/utils/include",
  ]

  defines = []
  cflags_cc = []
  ldflags = []
  libs = []
}

unit_test_deps = [
  "$NFC_DIR/interfaces/inner_api/cardEmulation:nfc_inner_kits_card_emulation",
  "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
  "$NFC_DIR/interfaces/inner_api/controller:nfc_inner_kits_controller",
  "$NFC_DIR/interfaces/inner_api/tags:nfc_inner_kits_tags",
  "$NFC_DIR/services:nfc_service_static",
  "//third_party/googletest:gtest_main",
]

unit_test_external_deps = [
  "ability_base:want",
  "ability_base:zuri",
  "ability_runtime:ability_manager",
  "ability_runtime:app_manager",
  "ability_runtime:dataobs_manager",
  "access_token:libaccesstoken_sdk",
  "bundle_framework:appexecfwk_core",
  "c_utils:utils",
  "common_event_service:cesfwk_innerkits",
  "data_share:datashare_consumer",
  "hilog:libhilog",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
]

ohos_unittest("controller_test") {
  module_out_path = "nfc/services"

  sources = [
    "controller_test/app_data_parser_test.cpp",
    "controller_test/external_deps_proxy_test.cpp",
    "controller_test/ndef_msg_callback_stub_test.cpp",
    "controller_test/nfc_ability_connection_callback_test.cpp",
    "controller_test/nfc_controller_callback_stub_test.cpp",
    "controller_test/nfc_controller_death_recipient_test.cpp",
    "controller_test/nfc_controller_impl_test.cpp",
    "controller_test/nfc_controller_test.cpp",
    "controller_test/nfc_preferences_test.cpp",
    "controller_test/query_app_info_callback_stub_test.cpp",
    "controller_test/reader_mode_callback_stub_test.cpp",
    "controller_test/tag_ability_dispatcher_test.cpp",
  ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("cardemulation_test") {
  module_out_path = "nfc/services"

  sources = [
    "cardemulation_test/cardemulation_test.cpp",
    "cardemulation_test/ce_service_test.cpp",
    "cardemulation_test/hce_cmd_callback_stub_test.cpp",
    "cardemulation_test/hce_session_test.cpp",
    "cardemulation_test/host_card_emulation_manager_test.cpp",
    "cardemulation_test/nci_ce_proxy_test.cpp",
    "cardemulation_test/nci_nfcc_proxy_test.cpp",
    "cardemulation_test/nci_tag_proxy_test.cpp",
  ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("tags_test") {
  module_out_path = "nfc/services"

  sources = [
    "tags_test/foreground_callback_stub_test.cpp",
    "tags_test/iso15693_tag_test.cpp",
    "tags_test/isodep_tag_test.cpp",
    "tags_test/mifare_classic_tag_test.cpp",
    "tags_test/mifare_ultralight_tag_test.cpp",
    "tags_test/ndef_formatable_tag_test.cpp",
    "tags_test/ndef_message_test.cpp",
    "tags_test/ndef_tag_test.cpp",
    "tags_test/nfca_tag_test.cpp",
    "tags_test/nfcb_tag_test.cpp",
    "tags_test/nfcf_tag_test.cpp",
    "tags_test/tag_foreground_test.cpp",
    "tags_test/tag_info_test.cpp",
    "tags_test/taginfo_parcelable_test.cpp",
  ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("public_test") {
  module_out_path = "nfc/services"

  sources = [ "public_test/nfc_public_test.cpp" ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("services_test") {
  module_out_path = "nfc/services"

  sources = [
    "services_test/app_data_parser_test.cpp",
    "services_test/ndef_bt_oob_data_parser_test.cpp",
    "services_test/nfc_polling_manager_test.cpp",
    "services_test/nfc_polling_params_test.cpp",
  ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("services_tags_test") {
  module_out_path = "nfc/services"

  sources = [
    "services_tags_test/nfc_service_tdd.cpp",
    "services_tags_test/tag_dispatcher_test.cpp",
    "services_tags_test/tag_session_stub_test.cpp",
    "services_tags_test/tag_session_test.cpp",
  ]

  configs = [ ":nfc_service_unit_test_config" ]

  deps = unit_test_deps

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_unittest("nci_adapter_test") {
  module_out_path = "nfc/services"
  configs = [ ":nfc_service_unit_test_config" ]
  cflags_cc = [ "-DNXP_EXTNS=TRUE" ]

  sources = [
    "nci_adapter_test/nfcc_nci_adapter_test.cpp",
    "nci_adapter_test/tag_host_test.cpp",
    "nci_adapter_test/tag_nci_adapter_test.cpp",
  ]

  deps = unit_test_deps
  deps += [
    "$NFC_DIR/services/src/nci_adapter/nci_native_default:nci_native_default",
    "//third_party/libnfc-nci/SN100x:nfc-nci",
  ]

  external_deps = unit_test_external_deps

  part_name = "nfc"
  subsystem_name = "communication"
}

group("nfc_service_unittest") {
  testonly = true
  deps = [
    ":cardemulation_test",
    ":controller_test",
    ":public_test",
    ":services_tags_test",
    ":services_test",
    ":tags_test",
  ]
  if (!nfc_use_vendor_nci_native) {
    deps += [ ":nci_adapter_test" ]
  }
}
