# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("connectedtag") {
  install_enable = true
  include_dirs = [
    "//third_party/node/src",
    "//native_engine",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/nfc/connected_tag/interfaces/innerkits/include",
    "//foundation/communication/nfc/connected_tag/interfaces/innerkits/interfaces",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//base/notification/common_event_service/frameworks/core/include",
  ]

  sources = [
    "nfc_napi_adapter.cpp",
    "nfc_napi_entry.cpp",
    "nfc_napi_event.cpp",
    "nfc_napi_utils.cpp",
  ]
  deps = [ "//foundation/communication/nfc/connected_tag/interfaces/innerkits:connected_tag_base" ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"
  part_name = "nfc_connected_tag"
  subsystem_name = "communication"
}
