# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

ohos_shared_library("connected_tag_hdi_adapter") {
  include_dirs = [
    "include",
    "//foundation/communication/nfc/connected_tag/interfaces/innerkits/include",
    "//drivers/peripheral/nfc/connected_tag/v1_0/client",
  ]

  cflags = [ "-fPIC" ]

  sources = [ "src/connected_tag_hdi_adapter.cpp" ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "$hdf_uhdf_path/host:libhdf_host",
    "$hdf_uhdf_path/ipc:libhdf_ipc_adapter",
    "$hdf_uhdf_path/utils:libhdf_utils",
    "//utils/native/base:utils",
    "//utils/native/base:utilsecurec_shared",
  ]

  if (is_standard_system) {
    external_deps = [
      "connected_tag_device_driver:connected_tag_client",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
    ]
  } else {
    external_deps = [
      "connected_tag_device_driver:connected_tag_client",
      "hilog:libhilog",
      "ipc:ipc_core",
    ]
  }

  subsystem_name = "communication"
  part_name = "nfc_connected_tag"
}
